<resources>
    <string name="app_name" translatable="false">Smart Step</string>
    <string name="login_button">LOGIN</string>
    <string name="reg_button">REGISTER</string>
    <string name="credits">Developed by Mihail Kalchev</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="user_hint">Username</string>
    <string name="age_hint">Age</string>
    <string name="weight_hint">Weight(kg)</string>
    <string name="lbs_rad">lbs</string>
    <string name="kg_rad">kg</string>
    <string name="sign_but">SIGN UP</string>
    <string name="agreement">By Signing up you agree to the Terms and Conditions</string>
    <string name="calories">Calories</string>
    <string name="goal">Goal</string>
    <string name="distance">KM</string>
    <string name="bmi">BMI</string>
    <string name="avg_steps">Average steps</string>
    <string name="totl_km">Total km</string>
    <string name="goals_reached">Reached goal</string>
    <string name="activity_goal">Activity goal</string>
    <string name="height">Height(cm)</string>
    <string name="statistics">Statistics</string>
    <string name="information">Information/Settings</string>
    <string name="sex">male/female</string>
    <string name="Update">UPDATE</string>
    <string name="FindParks">Find nearby parks</string>
    <string-array name="height_list">
        <item>5’0”/152.40cm</item>
        <item>5’1”/154.94cm</item>
        <item>5’2”/157.48cm</item>
        <item>5’3”/160.02cm</item>
        <item>5’4”/162.56cm</item>
        <item>5’5”/165.10cm</item>
        <item>5’6”/167.74cm</item>
        <item>5’7”/170.18cm</item>
        <item>5’8”/172.72cm</item>
        <item>5’9”/175.26cm</item>
        <item>5’10”/177.80cm</item>
        <item>5’11”/180.34cm</item>
        <item>6’0”/182.88cm</item>
        <item>6’1”/185.45cm</item>
        <item>6’2”/187.96cm</item>
        <item>6’3”/190.50cm</item>
        <item>6’4”/193.04cm</item>
        <item>6’5”/195.58cm</item>
        <item>6’6”/198.12cm</item>
        <item>6’7”/200.66cm</item>
        <item>6’8”/203.20cm</item>
        <item>6’9”/205.74cm</item>
        <item>6’10”/208.28cm</item>
        <item>6’11”/210.82cm</item>
        <item>7’0”/213.36cm</item>
        <item>7’1”/215.90cm</item>
        <item>7’2”/218.44cm</item>
    </string-array>
    <string-array name="goal_list">
        <item>10000</item>
        <item>11000</item>
        <item>12000</item>
        <item>13000</item>
        <item>14000</item>
        <item>15000</item>
        <item>16000</item>
        <item>17000</item>
        <item>18000</item>
        <item>19000</item>
        <item>20000</item>
        <item>21000</item>
        <item>22000</item>
        <item>23000</item>
        <item>24000</item>
        <item>25000</item>
        <item>26000</item>
        <item>27000</item>
        <item>28000</item>
        <item>29000</item>
        <item>30000</item>
    </string-array>
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>






